--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,19 @@ android {
     buildFeatures {
         compose true
     }
+
+    composeOptions {
+        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
+        kotlinCompilerExtensionVersion "$compose_version"
+    }
 }
 
 dependencies {
+    implementation project(":compose-view")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation("androidx.ui:ui-core:$compose_version")
 
     implementation 'com.google.android.material:material:1.1.0'
 
