--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
-    ext.compose_version = "0.1.0-dev12"
-    ext.composeui_version = "0.1.0-dev12"
+    ext.compose_version = "0.1.0-dev11"
+    ext.composeui_version = "0.1.0-dev11"
     repositories {
         google()
         jcenter()
@@ -16,6 +16,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
