--- a/compose-view/build.gradle
+++ b/compose-view/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation "androidx.ui:ui-animation:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
 
+    api "com.github.zsoltk:compose-router:0.11.1"
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
