--- a/compose-view/src/main/AndroidManifest.xml
+++ b/compose-view/src/main/AndroidManifest.xml
@@ -1,4 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.wesjon.compose_view">
-
-</manifest>
+<manifest package="br.com.wesjon.compose_view"/>
