--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
-    ext.compose_version = "0.1.0-dev11"
+    ext.compose_version = '0.1.0-dev13'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0-alpha10"
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha01'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
