--- a/compose-app/build.gradle
+++ b/compose-app/build.gradle
@@ -10,16 +10,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
 
     buildFeatures {
         compose true
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+        useIR = true
+    }
+
     composeOptions {
-        kotlinCompilerVersion "1.3.70-dev-withExperimentalGoogleExtensions-20200424"
         kotlinCompilerExtensionVersion "$compose_version"
     }
 }
@@ -27,14 +29,9 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation "androidx.compose:compose-runtime:$compose_version"
-    implementation "androidx.ui:ui-core:$compose_version"
-    implementation "androidx.ui:ui-layout:$compose_version"
-    implementation "androidx.ui:ui-material:$compose_version"
-    implementation "androidx.ui:ui-material-icons-extended:$compose_version"
-    implementation "androidx.ui:ui-foundation:$compose_version"
-    implementation "androidx.ui:ui-animation:$compose_version"
     implementation "androidx.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
 
-    api "com.github.zsoltk:compose-router:0.13.1"
+//    api "com.github.zsoltk:compose-router:0.16.0"
 }
