--- a/compose-app/build.gradle
+++ b/compose-app/build.gradle
@@ -29,6 +29,8 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    implementation "androidx.fragment:fragment-ktx:1.3.0-rc01"
+
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
