--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
 dependencies {
     implementation project(':compose-app')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
