--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-    ext.kotlin_version = "1.4.21"
-    ext.compose_version = '1.0.0-alpha10'
-    ext.navigation_version = "2.3.2"
+    ext.kotlin_version = "1.4.21-2"
+    ext.compose_version = '1.0.0-alpha11'
+    ext.navigation_version = "2.3.3"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha04'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha05'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
