--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,6 @@ org.gradle.jvmargs=-Xmx2048m
 org.gradle.parallel=true
 
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 
 kotlin.code.style=official
