--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -8,16 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.11
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew assemble
+      - uses: actions/checkout@v3.0.1
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2.1.5
+      - name: Run Build
+        run: ./gradlew assembleDebug
