--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.navigation_version = "2.4.2"
     repositories {
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
@@ -15,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
     }
 }
 
